--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./../styles/index.css">
 </head>
 <body>
-    <img src="./../assets/download.webp" alt="">
+    <img src="./../assets/vestrahorn-mountains-stokksnes-iceland.jpg" alt="">
     
     
     <main>  
