--- a/pages/branco.html
+++ b/pages/branco.html
@@ -13,7 +13,7 @@
         
         <img class="poke" src="./../assets/pokebola.png" alt="">
         <div class="junto">
-        <input type="text" placeholder="Pesquisar" class="search-input">
+        <input type="text" placeholder="" class="search-input">
        <button> <span class="material-symbols-outlined search-button">
             search
             </span></button>
@@ -52,7 +52,7 @@
       </main>
     <footer>
         <div class="voltar">
-            <hr>
+
             <p>Voltar Para Cima</p>
             
         </div>
